2005-02-23  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-antenna.el (w3m-antenna-check-rss): Parse all date fields.

2005-02-21  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-impress.el (shimbun-get-headers): Add comment-outed html
	source removal.

2005-02-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-form.el (w3m-form-input-textarea): Fix.

2005-02-21  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>,
	Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-form.el (w3m-form-input-textarea-mode-setup): Fix.
	(w3m-form-input-textarea): Follow the above change.

2005-02-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-form.el (w3m-form-textarea-edit-mode): Changed its default
	value to `text-mode'.

2005-02-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (install-package): Change the default directory in
	which icon files will be installed from `etc/w3m/icons/' into
	`etc/images/w3m/' following the most recent Emacs and Gnus.
	(install-package-ja): Ditto.

	* aclocal.m4 (AC_EXAMINE_PACKAGEDIR): Use configure-package-path.
	(AC_PATH_ICONDIR): Change the default directory in which icon files
	will be installed from `etc/w3m/icons/' into `etc/images/w3m/'
	following the most recent Emacs and Gnus.

	* w3m.el (w3m-icon-directory): Improve the way to determin the
	default value.

	* w3mhack.el (w3mhack-nonunix-install): Change the default directory
	in which icon files will be installed from `etc/w3m/icons/' into
	`etc/images/w3m/' following the most recent Emacs and Gnus.
	(w3mhack-make-package): Ditto.
	(w3mhack-what-where): Ditto.

2005-02-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-rss.el (shimbun-rss-get-headers): New function.
	(shimbun-get-headers): Use the above.

	* shimbun/sb-yahoo-auctions.el (shimbun-get-headers): Use the
	above.

2005-02-19  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/nnshimbun.el (nnshimbun-insert-nov): Encode extra field.
	(nnshimbun-parse-nov): Decode extra field.
